objects/Substage_Mapping1__c.object
<CustomObject>
    <fields>
        <fullName>Completed_Date_Time__c</fullName>
        <description>substage completed date time</description>
        <label>Completed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_Tasks__c</fullName>
        <description>Completed Tasks with Checkbox &apos;Completed__c&apos; as checked.</description>
        <inlineHelpText>Completed Tasks</inlineHelpText>
        <label>Completed Tasks</label>
        <summaryForeignKey>Task_Mapping__c.Substage_Mapping__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is stage completed</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SS_Task_Type_URL__c</fullName>
        <description>ss task type url</description>
        <formula>Substage__r.Image_URL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SS Task Type URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_ID__c</fullName>
        <description>is of stage associated</description>
        <formula>Stage_Mapping__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Mapping__c</fullName>
        <description>asspciated stage mapping record</description>
        <label>Stage Mapping</label>
        <referenceTo>Stage_Mapping__c</referenceTo>
        <relationshipLabel>Substage Mappings</relationshipLabel>
        <relationshipName>Substage_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <description>sub stage start date</description>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is stage started</description>
        <label>Started?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubStage_Name__c</fullName>
        <description>sub stage name</description>
        <formula>Substage__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubStage Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substage_Background_Color__c</fullName>
        <description>sub stage background color</description>
        <formula>IF(   Completed_Tasks__c   =   Total_Tasks__c ,&apos;#B3F07D&apos;, 
IF((AND((Completed_Tasks__c &gt; 0) , (Completed_Tasks__c &lt; Total_Tasks__c)) ),&apos;#FFB300&apos;, 
&apos;#006472&apos; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substage Background Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substage_Sort_Order__c</fullName>
        <description>substage sort order</description>
        <formula>Substage__r.Substage_Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substage Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated substage</description>
        <label>Substage</label>
        <referenceTo>Substage__c</referenceTo>
        <relationshipLabel>Substage Mappings</relationshipLabel>
        <relationshipName>Substage_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>task type</description>
        <formula>IF(ISPICKVAL( Substage__r.Task_Type__c ,&quot;Best Practices&quot;),&quot;Best Practices&quot;,
   IF(ISPICKVAL( Substage__r.Task_Type__c ,&quot;Other Applications&quot;),&quot;Other Applications&quot;,
      IF(ISPICKVAL( Substage__r.Task_Type__c ,&quot;Tools, Templates, Forms&quot;),&quot;Tools, Templates, Forms&quot;,
          IF(ISPICKVAL( Substage__r.Task_Type__c ,&quot;Scripting&quot;),&quot;Scripting&quot;,
            IF(ISPICKVAL( Substage__r.Task_Type__c ,&quot;&quot;),&quot;&quot;,&quot;|Error|:Formula Field:Task Type:Add the new value&quot;
  )   )  )  )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substage Task Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <description>Total Tasks</description>
        <inlineHelpText>Total Tasks</inlineHelpText>
        <label>Total Tasks</label>
        <summaryForeignKey>Task_Mapping__c.Substage_Mapping__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Verifiable_Outcome__c</fullName>
        <description>veriable outcome</description>
        <formula>Substage__r.Verifiable_Outcome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verifiable Outcome</label>
        <type>Text</type>
    </fields>
    <label>Substage Mapping</label>
    <nameField>
        <displayFormat>SSM-{0000000000}</displayFormat>
        <label>Substage Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substage Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>